Add additional config